Fixes z-indices and disappearing headers when not showing all case headers

--- a/src/components/nested-table.scss
+++ b/src/components/nested-table.scss
@@ -1,3 +1,4 @@
 .nestedTableWrapper {
   height: 100vh;
+  overflow: hidden;
 }
