--- a/src/components/tables.scss
+++ b/src/components/tables.scss
@@ -129,14 +129,23 @@ table {
       background-color: #CEE9FB;
       border: 1px solid #3c78d8;
       position: sticky;
+
+    }
+
+    tr.collection0>th {
       top: 16px;
+      z-index: 9;
+    }
+    
+    tr.collection0:nth-child(3)>th {
+      top: 32px;
       z-index: 8;
     }
 
     .collection1>th, th.collection1 {
       background-color: #F7EABA;
       position: sticky;
-      top: 32px;
+      top: 48px;
       z-index: 6;
     }
 
@@ -147,7 +156,7 @@ table {
     .collection2>th, th.collection2 {
       background-color: #CCBEE0;
       position: sticky;
-      top: 48px;
+      top: 64px;
       z-index: 5;
     }
 
@@ -158,7 +167,7 @@ table {
     .collection3>th, th.collection3 {
       background-color: #BEE0CA;
       position: sticky;
-      top: 64px;
+      top: 80px;
       z-index: 4;
     }
 
@@ -169,7 +178,7 @@ table {
     .collection4>th, th.collection4 {
       background-color: #E7C3A4;
       position: sticky;
-      top: 80px;
+      top: 96px;
       z-index: 3;
     }
 
